k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simple-sso
  labels:
    name: simple-sso
    app: monorepo
