k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: simple-sso
  labels:
    app: monorepo
    component: server
spec:
  type: ClusterIP
  selector:
    app: monorepo
    component: server
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  sessionAffinity: None
